--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,9 @@
 	<groupId>net.praqma</groupId>
 	<artifactId>VANS</artifactId>
 	<packaging>jar</packaging>
-	<version>0.1.2</version>
+	<version>0.1.3</version>
 	<name>Validate Any Software</name>
 	<url>http://maven.apache.org</url>
-
 	<scm>
 		<url>launchpad.org</url>
 	</scm>
@@ -19,7 +18,6 @@
 		<directory>${project.basedir}/build</directory>
 		<outputDirectory>${project.build.directory}/classes</outputDirectory>
 		<finalName>${project.artifactId}-${project.version}</finalName>
-
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -30,7 +28,6 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -38,7 +35,6 @@
 				<configuration>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.2</version>
@@ -57,34 +53,22 @@
 					</execution>
 				</executions>
 			</plugin>
-
 		</plugins>
-
 	</build>
-
-
 	<reporting>
 		<plugins>
 		</plugins>
 	</reporting>
-
-
-
 	<dependencies>
-
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
 		</dependency>
-
 		<dependency>
 			<groupId>net.praqma</groupId>
 			<artifactId>praqmajutils</artifactId>
-			<version>0.1.6</version>
+			<version>0.1.8-SNAPSHOT</version>
 		</dependency>
-
-
 	</dependencies>
-
 </project>
