--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,24 @@
 	<version>0.1.3</version>
 	<name>Validate Any Software</name>
 	<url>http://maven.apache.org</url>
-	<scm>
-		<url>launchpad.org</url>
-	</scm>
+
 	<organization>
 		<name>Praqma A/S</name>
 		<url>http://www.praqma.net</url>
 	</organization>
+	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+		
+	<distributionManagement>
+		<repository>
+			<id>praqma</id>
+			<name>praqma</name>
+			<url>scpexe://10.10.1.25:/var/www/repo/maven</url>
+		</repository>
+	</distributionManagement>	
+	
 	<build>
 		<directory>${project.basedir}/build</directory>
 		<outputDirectory>${project.build.directory}/classes</outputDirectory>
@@ -54,21 +65,38 @@
 				</executions>
 			</plugin>
 		</plugins>
+		
+		<extensions>
+			<!-- Enabling the use of FTP -->
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh-external</artifactId>
+				<version>1.0</version>
+			</extension>
+		</extensions>
+		
 	</build>
-	<reporting>
-		<plugins>
-		</plugins>
-	</reporting>
+	
+	<repositories>
+		<repository>
+			<id>praqma</id>
+			<name>praqma</name>
+			<url>http://code.praqma.net/repo/maven</url>
+		</repository>
+	</repositories>
+	
 	<dependencies>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.16</version>
-		</dependency>
 		<dependency>
 			<groupId>net.praqma</groupId>
 			<artifactId>praqmajutils</artifactId>
-			<version>0.1.8-SNAPSHOT</version>
+			<version>0.1.8</version>
 		</dependency>
 	</dependencies>
+	
+	<scm>
+		<connection>scm:git:http://github.com/Praqma/vans.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/Praqma/vans.git</developerConnection>
+		<url>https://github.com/Praqma/vans.git</url>
+	</scm>	
+	
 </project>
